# libcineform

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  libcineform.pc.cmake
Codec/: DemoasicFrames.cpp  DemoasicFrames.h  InvertHorizontalStrip16s.c  RGB2YUV.c  RGB2YUV.h  allocator.c  allocator.h  bandfile.c  bandfile.h  bayer.c  bayer.h  bitstream.c  bitstream.h  buffer.c  buffer.h  codebooks.c  codebooks.h  codec.c  codec.h  color.h  config.h  convert.c  convert.h  counter.h  cpuid.c  cpuid.h  debug.c  debug.h  decoder.c  decoder.h  demosaicframes.c  demosaicframes.h  dither.c  dither.h  draw.c  draw.h  dump.c  dump.h  encoder.c  encoder.h  (+42 more)
Common/: AVIExtendedHeader.h  CFHDAllocator.h  CFHDDecoder.h  CFHDEncoder.h  CFHDError.h  CFHDMetadata.h  CFHDMetadataTags.h  CFHDSampleHeader.h  CFHDTypes.h  Condition.h  IAllocator.h  Lock.h  MessageQueue.cpp  MessageQueue.h  SampleMetadata.h  StdAfx.h  ThreadMessage.cpp  ThreadMessage.h  ThreadPool.cpp  ThreadPool.h  fsm17.inc  fsm18.inc  fsm9.inc  macdefs.h  table17.inc  table18.inc  table9.inc  ver.h
ConvertLib/: Bilinear.cpp  Bilinear.h  ColorFlags.h  ColorMatrix.cpp  ColorMatrix.h  ConvertLib.h  ConvertYUV8.cpp  ConvertYUV8.h  DPXConverter.cpp  DPXConverter.h  ImageConverter.cpp  ImageConverter.h  ImageScaler.cpp  ImageScaler.h  MemAlloc.cpp  MemAlloc.h  StdAfx.h
DecoderSDK/: CFHDDecoder.cpp  CFHDMetadata.cpp  Conversion.cpp  Conversion.h  ISampleDecoder.cpp  ISampleDecoder.h  SampleDecoder.cpp  SampleDecoder.h  SampleMetadata.cpp  SampleMetadata.h  StdAfx.h  resource.h  ver.h
EncoderSDK/: Allocator.h  AsyncEncoder.cpp  AsyncEncoder.h  CFHDEncoder.cpp  CFHDEncoderMetadata.cpp  CFHDEncoderPool.cpp  EncoderPool.cpp  EncoderPool.h  EncoderQueue.cpp  EncoderQueue.h  Interface.h  MetadataWriter.cpp  MetadataWriter.h  SampleEncoder.cpp  SampleEncoder.h  StdAfx.h  VideoBuffers.cpp  VideoBuffers.h
